starting this air bnb exemple

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,12 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= render "shared/navbar" %>
+    <div class="wrapper">
+      <%= yield %> 
+    </div>
+    <%= render "shared/flashes" %>
+    <%= render "shared/footer" %>
+
   </body>
 </html>
