--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -2,6 +2,7 @@
     background-size: cover;
     background-position: center;
     padding: 150px 0;
+    min-height: calc(100vh - 300px);
   }
   
   .banner h1 {
