--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,10 +1,12 @@
 .banner {
-    background-size: cover;
+    background-size: 100%;
+    background-repeat: no-repeat;
     background-position: center;
+    // transform: scale(0.7);
     padding: 150px 0;
-    min-height: calc(100vh - 300px);
+    min-height: calc(100vh - 166px);
   }
-  
+
   .banner h1 {
     margin: 0;
     color: white;
@@ -12,11 +14,10 @@
     font-size: 32px;
     font-weight: bold;
   }
-  
+
   .banner p {
     font-size: 20px;
     color: white;
     opacity: .7;
     text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   }
-  
