--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,7 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(<%= asset_path 'banner.jpg' %>);">
   <div class="container">
-    <h1>Le Wagon brings <strong>tech skills</strong> to <strong>creative people</strong>!</h1>
-    <p>Change your life and learn to code at one of our campuses around the world.</p>
+    <h1>PokemonBnB <strong>propose</strong> de <strong>trouver son pokemon</strong>!</h1>
+    <p></p>
     <%= link_to "Find your Pokemon now", pokemons_path, class: "btn btn-flat machin" %>
   </div>
 </div>
-
