--- a/app/views/pokemons/index.html.erb
+++ b/app/views/pokemons/index.html.erb
@@ -1,18 +1,19 @@
 <h1>Héhoooooooooooo</h1>
 
 <div class="cards">
-  <% @pokemons.each do |pokemon| %>
-    <div class="card-trip">
-      <img src="<%= pokemon.poster_url %>" />
-      <div class="card-trip-infos">
-        <div>
-          <h2><%= pokemon.name %></h2>
-          <p><%= pokemon.types.join('') %></p>
+  <% @pokemons.shuffle.each do |pokemon| %>
+    <%= link_to pokemon_path(pokemon) do %>
+      <div class="card-trip">
+        <img src="<%= pokemon.poster_url %>" />
+        <div class="card-trip-infos">
+          <div>
+            <h2><%= pokemon.name %></h2>
+            <p><%= pokemon.types.join('') %></p>
+          </div>
+          <h2 class="card-trip-pricing"><%= pokemon.price_per_day %>€</h2>
+          <img src="https://kitt.lewagon.com/placeholder/users/wulfens" class="card-trip-user avatar-bordered" />
         </div>
-        <h2 class="card-trip-pricing"><%= pokemon.price_per_day %>€</h2>
-        <img src="https://kitt.lewagon.com/placeholder/users/wulfens" class="card-trip-user avatar-bordered" />
       </div>
-    </div>
-
+    <% end %>
   <% end %>
 </div>
