--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,9 +1,13 @@
+a {
+  text-decoration: none;
+  color: black;
+}
+
 .card-trip {
   overflow: hidden;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   height: 270px;
-  text-decoration: none;
 }
 
 .card-trip > img {
