--- a/app/views/pokemons/show.html.erb
+++ b/app/views/pokemons/show.html.erb
@@ -1,3 +1,5 @@
-<%= @pokemon.name %>
+<div>
+  <%= @pokemon.name %>
+</div>
 
-<%= link_to "pokemon index", pokemons_path %>
+<%= link_to "Back", pokemons_path %>
