--- a/app/views/pokemons/new.html.erb
+++ b/app/views/pokemons/new.html.erb
@@ -1,1 +1,9 @@
-<%=  %>
+<div class="container">
+  <%= simple_form_for(@pokemon) do |f| %>
+    <%= f.input :name %>
+    <%= f.input :types %>
+    <%= f.input :poster_url %>
+    <%= f.input :price_per_day %>
+    <%= f.submit %>
+  <% end %>
+</div>
