--- a/app/views/pokemons/new.html.erb
+++ b/app/views/pokemons/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <%= simple_form_for(@pokemon) do |f| %>
     <%= f.input :name %>
-    <%= f.input :types %>
+    <%= f.input :types, collection: Pokemon::TYPES, input_html: {multiple: true, data: {controller: "tom-select", tom_select_options_value: {tags: true, plugins: ['remove_button']}}} %>
     <%= f.input :poster_url %>
     <%= f.input :price_per_day %>
     <%= f.submit %>
