--- a/app/views/pages/choice.html.erb
+++ b/app/views/pages/choice.html.erb
@@ -1,5 +1,6 @@
 
 <%= simple_form_for(current_user, url: filter_user_path(id: current_user.id)) do |f| %>
-    <%= f.input :pokemons, collection: @pokemons, as: :check_boxes %>
+    <%= f.input :pokemons, collection: @pokemons, as: :check_boxes, 
+    label_method: lambda { |b| image_tag(b.poster_url) }  %>
   <%= f.submit %>
 <% end %>
